# pixel-yeeter

./: .gitmodules  README.md
HUB75/raspberry_pi/: CMakeLists.txt  hub75-pixelflood-server.cpp  net.cpp  pixelflood_handler.cpp  pixelflood_handler.h
client/python/: README.md  pyproject.toml
client/python/examples/: line.py  noise.py  pil.py  scroller.py  simple.py  sparkline-scroller.py  sparkline.py  video4linux.py
client/python/examples/nurdspace/: README.md  nurdspace.py
client/python/lib/: backend.py  backend_ddp.py  backend_pixelflood.py  frontend.py
client/python/pixel-blaster/lib/: frontend.py
client/python/pixel_blaster/: __init__.py  backend.py  backend_ddp.py  backend_pixelflood.py  frontend.py
client/python/pixel_yeeter/: __init__.py  backend.py  backend_ddp.py  backend_pixelflood.py  frontend.py
server/HUB75/raspberry_pi/: CMakeLists.txt  README.md  hub75-pixelflood-server.cpp  net.h  pixelflood_handler.cpp  pixelflood_handler.h
server/HUB75/raspberry_pi/combined/: CMakeLists.txt  ddp_handler.cpp  ddp_handler.h  hub75-combined-server.cpp  net.cpp  net.h  pixelflood_handler.cpp  pixelflood_handler.h
server/HUB75/raspberry_pi/ddp/: CMakeLists.txt  README.md  ddp_handler.cpp  hub75-ddp-server.cpp  net.cpp
server/HUB75/raspberry_pi/pixelflood/: CMakeLists.txt  README.md  error.cpp  pixelflood_handler.cpp  pixelflood_handler.h
server/SDL3/: CMakeLists.txt  ddp_handler.cpp  net.cpp  pixelflood_handler.cpp  pixelflood_handler.h  server.cpp
