[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel_blaster"
version = "0.1.0"
authors = [
  { name="Folkert van Heusden", email="folkert@vanheusden.com" },
]
description = "A simple library for drawing on RGB LED-matrix panels"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/folkertvanheusden/pixel-blaster"
Issues = "https://github.com/folkertvanheusden/pixel-blaster/issues"
